@@ -1,17 +1,17 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 1.0-7
-Date: 2020-02-13
+Version: 1.1-0
+Date: 2021-03-08
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
-Depends: variables (>= 0.0-30), R (>= 3.2.0)
+Depends: variables (>= 1.1-0), R (>= 3.2.0)
 Imports: stats, polynom, Matrix, orthopolynom, methods
 URL: http://ctm.R-forge.R-project.org
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2020-02-13 16:40:58 UTC; hothorn
+Packaged: 2021-03-08 14:33:16 UTC; hothorn
 Author: Torsten Hothorn [aut, cre] (<https://orcid.org/0000-0001-8301-0471>)
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2020-02-14 07:10:18 UTC
+Date/Publication: 2021-03-09 08:50:06 UTC
