@@ -2,6 +2,13 @@
 \name{NEWS}
 \title{NEWS file for the basefun package}
 
+\section{Changes in Version 1.1-0 (2020-03-01)}{
+  \itemize{
+    \item{More infrastructure for \code{as.basis} to return 
+          a \code{Matrix} object for ordered factors.}
+  }
+}
+
 \section{Changes in Version 1.0-7 (2020-02-13)}{
   \itemize{
     \item{Update citation info.}
